fixed white space

--- a/src/components/css_files/post.scss
+++ b/src/components/css_files/post.scss
@@ -135,6 +135,7 @@
         max-height: 300px;
         overflow: hidden;
         margin-left: 7px;
+        white-space: pre-line;
       }
     }
     &__comment{
