--- a/src/components/css_files/singlepost.scss
+++ b/src/components/css_files/singlepost.scss
@@ -72,6 +72,7 @@ body {
   padding-right: 25px;
   padding-top: 10px;
   padding-bottom: 10px;
+  white-space: pre-line;
 }
 
 .percent {
